2006-03-04  Roland McGrath  <roland@frob.com>

	* Makefile.in (DEFS): Substitute once and use the variable elsewhere.

2006-03-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[ patch #4737 ]
	* i386/i386/iopb.c: Include "vm_param.h".
	(io_tss_init): Fix address and limit of user TSS.

2006-03-04  Thomas Schwinge  <tschwinge@gnu.org>

	Remove unused and unsupported code.  Consult the file
	`DEVELOPMENT' for details.  Partly based on suggestions by
	Gianluca Guida <glguida@gmail.com>.

	* i386/bogus/par.h: Remove file.
	* i386/i386at/if_par.c: Likewise.
	* i386/i386at/if_par.h: Likewise.
	* i386/i386at/conf.c: Don't include <par.h> anymore and adopt all users
	of NPAR as if it were always defined to `0'.
	* i386/i386at/lpr.c: Likewise.

	* i386/bogus/de6c.h: Remove file.
	* i386/i386at/if_de6c.c: Likewise.
	* i386/i386at/if_de6c.h: Likewise.
	* i386/i386at/if_de6s.S: Likewise.
	* i386/i386at/conf.c: Don't include <de6c.h> anymore and adopt all
	users of NDE6C as if it were always defined to `0'.
	* i386/i386at/lpr.c: Likewise.

2006-02-20  Thomas Schwinge  <tschwinge@gnu.org>

	Remove unused and unsupported code.  Consult the file
	`DEVELOPMENT' for details.  Partly based on suggestions by
	Gianluca Guida <glguida@gmail.com>.

	* i386/bogus/blit.h: Remove file.
	* i386/i386at/blit.c: Likewise.
	* i386/i386at/blitreg.h: Likewise.
	* i386/i386at/blituser.h: Likewise.
	* i386/i386at/blitvar.h: Likewise.
	* i386/i386at/conf.c: Don't include <blit.h> anymore and adopt all
	users of NBLIT as if it were always defined to `0'.
	* i386/i386at/kd.c: Likewise.
	(blit_init): Remove definition.
	(blit_present): Likewise and adopt all users as if it were always
	defined to `FALSE'.
	* i386/Makefile.in (i386at-files): Remove `blit.c'.

	* bogus/net_atm.h: Remove file.
	* Makefile.in (bogus-files): Remove `net_atm.h'.
	* kern/syscall_sw.c: Don't include <net_atm.h> anymore and adopt all
	users of NET_ATM as if it were always defined to `0'.
	* kern/task.c: Likewise.