@@ -58,9 +58,11 @@ AC_PROG_RANLIB
 AC_CHECK_TOOL([AR], [ar])
 AC_CHECK_TOOL([LD], [ld])
 AC_CHECK_TOOL([NM], [nm])
+AC_CHECK_TOOL([STRIP], [strip])
 
 AC_CHECK_TOOL([MIG], [mig], [mig])
 
+AC_CHECK_PROG([GZIP], [gzip], [gzip], false)
 AC_CHECK_PROG([MBCHK], [mbchk], [mbchk], :)
 
 # Set up `machine' and `mach/machine' links in the build directory for easier
